--- a/.github/workflows/one_the_1.yml
+++ b/.github/workflows/one_the_1.yml
@@ -6,7 +6,7 @@ name: Every Five Alive 1
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '1-59/5 * * * *'
+    - cron:  '1 * * * *'
 
 jobs:
   build:
