--- a/.github/workflows/on_the_2.yml
+++ b/.github/workflows/on_the_2.yml
@@ -6,7 +6,7 @@ name: Every Five Alive 2
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '2-59/5 * * * *'
+    - cron:  '2 * * * *'
 
 jobs:
   build:
