--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -6,7 +6,7 @@ name: Every 20
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/20 * * * *'
+    - cron:  '1 1 * * *'
 
 jobs:
   build:
